Update index.html iframe

--- a/index.html
+++ b/index.html
@@ -2,10 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="3;url=http://194.182.80.42:80">
-    <title>Redirecting to Google</title>
+    <meta name="viewport" content="width=device-width, initial-scale=0.9">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: left;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            margin-top: 0px;
+        }
+
+        iframe {
+            width: 450px;
+            height: 800px;
+            border: 1px solid #ccc;
+        }
+    </style>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow this <a href="http://194.182.80.42:80">link to Google</a>.</p>
+    <div class="container">
+        <iframe src="http://194.182.80.42:80" title="Chata"></iframe>
+    </div>
 </body>
 </html>
